[CLIC] added flavour-tagging performance results.

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -485,3 +485,29 @@ author = "F. Krummenacher",
       reportNumber  = "\href{https://cds.cern.ch/record/1443516}{LCD-Note-2011-021}",
       %url           = "https://cds.cern.ch/record/1443516",
 }
+
+@online{website:LCFIPlus,
+      title = "LCFIPlus",
+      url = "https://confluence.slac.stanford.edu/display/ilc/LCFIPlus"
+}
+
+@article{AlipourTehrani:1742993,
+      author        = "Alipour Tehrani, N. and Roloff, P.",
+      title         = "{Optimisation Studies for the CLIC Vertex-Detector
+                       Geometry}",
+      month         = "Jul",
+      year          = "2014",
+      reportNumber  = "\href{http://cds.cern.ch/record/1742993}{CLICdp-Note-2014-002}",
+      %url           = "http://cds.cern.ch/record/1742993",
+}
+
+@article{DuarteRamos:1572989,
+      author        = "Duarte Ramos, F. and Gerwig, H. and Villarejo Bermudez,
+                       M.",
+      title         = "{CLIC inner detectors cooling simulations}",
+      collaboration = "CERN Linear Collider Detector collaboration",
+      month         = "Jan",
+      year          = "2014",
+      reportNumber  = "\href{http://cds.cern.ch/record/1572989}{LCD-Note-2013-007}",
+      %url           = "http://cds.cern.ch/record/1572989",
+}
