[Software] Added an illustration for digitisation

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -28,6 +28,7 @@
 % \usetikzlibrary{positioning,shapes,arrows}
 % \usetikzlibrary{decorations.pathmorphing}
 % \usetikzlibrary{decorations.markings}
+%\usepackage[dvipsnames]{xcolor}
 \usepackage{tikz}
 \usetikzlibrary{matrix}
 \usepackage{thesis_defs}
@@ -38,7 +39,6 @@
 \usepackage{amsmath,mathtools}
 \RequirePackage[capitalise,noabbrev]{cleveref} % For the cref (clever reference)
 \usepackage{braket}
-\usepackage{xcolor}
 \usepackage{tikz-timing}[2009/12/09] % for the clock
 %------------------------------------------------------------------------------
 % Instead of colouring  links, cites, table of contents etc.
