--- a/include/Software.tex
+++ b/include/Software.tex
@@ -3,6 +3,15 @@
 \label{sec:Software}
 %==============================================================================    
 
+Simulation tools have a crucial role in the development and also
+understanding of the performance of semiconductor devices. The
+simulations are validated with the data and used to predict the
+performance of small-pitch pixels where data is unavailable. 
+
+This chapter describes the simulation tools used to understand the
+performance of Timepix3 devices. The reconstruction software (for data
+and simulation) is also presented.
+
 %% --------------------------------------------- %%
 \section{\textsc{Geant4}}\label{sec:Silicon_Geant4}
 
@@ -14,13 +23,13 @@ large-scale detectors, more accurate simulations are needed in order
 to understand the complex situations. \textsc{Geant4} provides
 software components which can be used to study basic phenomena,
 geometries and full-scale detector simulations for
-experiments. \textsc{Geant4} simulations take into account the
-geometry of the system, the materials involved, the fundamental
-particles, the generation of primary particles, the tracking of
-particles through materials and external electromagnetic fields, the
-physics processes involved in the possible interaction of the
-particles with the materials they are passing through, the response of
-sensitive components and mostly validated with data.
+experiments. \textsc{Geant4} simulations take into account parameters
+such as: the geometry of the system, the materials involved, the
+fundamental particles, the generation of primary particles, the
+tracking of particles through materials and external electromagnetic
+fields, the physics processes involved in the possible interaction of
+the particles with the materials they are passing through, the
+response of sensitive components and mostly validated with data.
 
 \textsc{Geant4} provides physics models for different type of
 interactions called \textit{physics lists}. The \textit{emstandard}
@@ -43,15 +52,16 @@ loss for the selected material and the given Lorentz factor.
 
 \cref{fig:BichselVSG4} compares the energy loss due to ionisation in
 $50\,\micron$ and $450\,\micron$ thick silicon sensors for different
-\textsc{Geant4} physics lists and the Bichsel model. \textsc{Geant4}
-version 10.1.2 is used to obtain these distributions. Version 9.6.2
-also showed the same results. For $50\,\micron$ thick sensor, the
-\textit{emstandard\_opt3} physics list gives a reasonable value for
-the $\Delta_p$ but the width $w$ of the distribution is more narrow
-than the Bichsel distribution. The PAI model corrects for $w$ and the
-energy deposition is very similar to the Bichsel model. For the thick
-sensor of $450\,\micron$, all the \textsc{Geant4} physics lists and
-the Bichsel model show similar distributions.
+\textsc{Geant4} physics lists and the Bichsel model
+(c.f. \cref{sec:bichsel}). \textsc{Geant4} version 10.1.2 is used to
+obtain these distributions. Version 9.6.2 also showed the same
+results. For $50\,\micron$ thick sensor, the \textit{emstandard\_opt3}
+physics list gives a reasonable value for the $\Delta_p$ but the width
+$w$ of the distribution is more narrow than the Bichsel
+distribution. The PAI model corrects for $w$ and the energy deposition
+is very similar to the Bichsel model. For the thick sensor of
+$450\,\micron$, both PAI and emstandard\_opt3 physics lists show
+similar distributions as the Bichsel model.
 
 The energy deposition given by the PAI model is very close to the one
 calculated by Bichsel especially for the fluctuations around the most
@@ -74,25 +84,7 @@ requires more computation power.
     the emstandard\_opt3 physics lists.}
   \label{fig:BichselVSG4}
 \end{figure}
-%% --------------------------------------------- %%
-\section{TCAD simulations}
-\label{sec:TCAD}
-Technology Computer-Aided Design (TCAD) as a powerful simulation tool
-is used to optimise and develop semiconductor processing technologies
-as well as the device operation~\cite{synopsysTCAD}. TCAD uses the
-finite element method to numerically solve the solutions to the
-physical partial differential equations in semiconductor, such as the
-continuity and diffusion equations. This allows for the modeling of
-the structural properties and the electrical behaviour of
-semiconductor devices.
 
-For this study Synopsys TCAD version I-2013.12 is used for several
-purposes. First to understand the movement of charge carriers in
-silicon and the coupling to the readout in
-\cref{sec:RamoTheorem}. Also it is used to simulate active-edge
-devices and understand the measurements later in
-\cref{ch:ActiveEdgeSensors}.
-%% --------------------------------------------- %%
 %% --------------------------------------------- %%
 \section{AllPix simulation framework}
 \label{sec:AllPix}
@@ -133,10 +125,10 @@ planes.
 
 The convention used for the pixel detectors (in AllPix but also the
 reconstruction software as described in \cref{sec:recoSoft}) for a
-matrix of $256\times256$ pixels is shown in
+Timepix3-like matrix of $256\times256$ pixels is shown in
 \cref{fig:coordinateSystem}. The pixel coordinates (X, Y) and the
 \textcolor{blue}{local coordinates (x, y) in millimeters} of the
-center of the pixels in the corners of the sensor are shown. In this
+center of the pixels in the corners of the matrix are shown. In this
 convention we are looking from the sensor side with the periphery on
 the top.
 
@@ -171,8 +163,8 @@ the top.
   \caption{The coordinates system for a matrix of $256\times256$
     pixels. The pixel coordinates (X, Y) and the
     \textcolor{blue}{local coordinates (x, y) in millimeters} of the
-    center of the pixels in the corners of the sensor are shown. In
-    this convention we are looking from the sensor side with the
+    center of the pixels in the corners of the matrix are shown. In
+    this convention, we are looking from the sensor side with the
     periphery on the top.}
   \label{fig:coordinateSystem}
 \end{figure}
@@ -192,19 +184,19 @@ this XML file.
 %% --------------------------------------------- %%
 \subsection{Geometry of the simulation scenario}
 
-In a file \texttt{macro.in}, all the simulation scenario is
-defined. The position of the detectors in the space is specified by
-the coordinates (x, y, z) of the centre of the detectors and the
-rotations around the x, y and z axes. The physics list used by
-\textsc{Geant4} is specified. The General Particle Source (GPS), which
-is the \textsc{Geant4} toolkit for Monte-Carlo of the high-energy
-particle transport is also described in the macro. The particle type,
-the beam energy, the position and distributions are customisable. The
+The simulation scenario is defined in the file \texttt{macro.in}. The
+position of the detectors in the space is specified by the coordinates
+(x, y, z) and the rotations around the x, y and z axes of the centre
+of the detectors. The physics list used by \textsc{Geant4} is
+specified. The General Particle Source (GPS), which is the
+\textsc{Geant4} toolkit for Monte-Carlo of the high-energy particle
+transport is also described in the macro. The particle type, the beam
+energy, the position and distributions are customisable. The
 simulation is done based on frames.
 
 Visualisation parameters are also given in the macro. Open
-Inventor~\cite{OpenInventor} can be for example used to visualise the
-simulation scenario and also the particle tracks in the detectors.
+Inventor~\cite{OpenInventor} can be, for example, used to visualise
+the simulation scenario and also the particle tracks in the detectors.
 
 %% --------------------------------------------- %%
 \subsection{Digitisation}
@@ -222,7 +214,102 @@ electronic noise is added and the chip threshold are applied to the
 hits. The hit energy is converted to the digital value TOT
 (time-over-threshold) using the readout ASICs calibrations.
 
+\cref{fig:digitisation} schematically illustrates the digitisation in
+a sensor. Each \textsc{Geant4} step is shown in a circle. At each
+step, the contribution of the diffusion is calculated in the hit and
+its neighbouring pixels. For each pixel, all the contributions sum up
+and the total charge deposited in a pixel is calculated.
 
+\begin{figure}[htbp]
+  \centering
+  \begin{tikzpicture}[node distance = 2.5cm, auto]
+    \begin{scope}[x={(image.south east)},y={(image.north west)}]
+
+      \draw[thick] (0.2, 0.6) -- (0.8, 0.6);
+      \draw[thick] (0.2, 0.2) -- (0.8, 0.2);
+
+      \draw[thick] (0.2, 0.2) -- (0.2, 0.6);
+      \draw[thick] (0.8, 0.2) -- (0.8, 0.6);  
+
+      \draw[thick] (0.4, 0.2) -- (0.4, 0.6);  
+      \draw[thick] (0.6, 0.2) -- (0.6, 0.6);  
+
+ 
+
+
+      \draw[green, thick] (0.45, 0.2) circle (0.5mm);
+      \node[right, color=green] at (0.45, 0.22) {Step 1};
+      \draw[green, thick] (0.45, 0.2) -- (0.36, 0.6);  
+      \draw[green, thick] (0.45, 0.2) -- (0.54, 0.6);
+      \draw[green, thick, <->] (0.36, 0.62) -- (0.54, 0.62);
+      \node[above, color=green] at (0.36, 0.62) {$\sigma_{1}$};
+
+      \draw[red, thick] (0.473, 0.3) circle (0.5mm);
+      \node[right, color=red] at (0.473, 0.32) {Step 2};
+      \draw[red, thick] (0.473, 0.3) -- (0.403, 0.6);
+      \draw[red, thick] (0.473, 0.3) -- (0.543, 0.6);
+      \draw[red, thick, <->] (0.403, 0.64) -- (0.543, 0.64);
+      \node[above, color=red] at (0.403, 0.64) {$\sigma_{2}$};
+
+      \draw[cyan, thick] (0.5, 0.4) circle (0.5mm);
+      \node[right, color=cyan] at (0.5, 0.42) {Step 3};
+      \draw[cyan, thick] (0.5, 0.4) -- (0.45, 0.6);
+      \draw[cyan, thick] (0.5, 0.4) -- (0.55, 0.6);
+      \draw[cyan, thick, <->] (0.45, 0.66) -- (0.55, 0.66);
+      \node[above, color=cyan] at (0.45, 0.66) {$\sigma_{3}$};
+
+      \draw[purple, thick] (0.525, 0.5) circle (0.5mm);
+      \node[right, color=purple] at (0.525, 0.52) {Step 4};
+      \draw[purple, thick] (0.525, 0.5) -- (0.495, 0.6);
+      \draw[purple, thick] (0.525, 0.5) -- (0.555, 0.6);
+      \draw[purple, thick, <->] (0.495, 0.68) -- (0.555, 0.68);
+      \node[above, color=purple] at (0.495, 0.68) {$\sigma_{4}$};
+
+      \draw[blue, thick, ->] (0.4, 0.0) -- (0.6, 0.8);  
+      \node[above, color=blue] at (0.6, 0.8) {MIP};
+      \draw[black, thick, ->] (0.1, 0.2) -- (0.1, 0.6);  
+      \node[left, color=black] at (0.1, 0.4) {E\textsubscript{field}};
+
+      \node[below, color=black] at (0.3, 0.15) {Pixel 1};
+      \node[below, color=black] at (0.5, 0.15) {Pixel 2};
+      \node[below, color=black] at (0.7, 0.15) {Pixel 3};
+
+      %% \node at (4.5,4) 
+      %% {some text spanning three lines with automatic line breaks};
+
+      %% \draw[help lines,xstep=.1,ystep=.1] (0, 0) grid (1,1);
+      %% \foreach \x in {0,1,...,9} { \node [anchor=north] at (\x/10,0) {0.\x}; }
+      %% \foreach \y in {0,1,...,9} { \node [anchor=east] at (0,\y/10) {0.\y}; }
+    \end{scope}
+  \end{tikzpicture}
+  \caption{Illustration of the digitisation in a sensor. Each
+    \textsc{Geant4} step (\texttt{G4Step}) is shown with a circle. The
+    contribution of the diffusion ($\sigma_1$, $\sigma_2$, $\sigma_3$
+    and $\sigma_4$) in the hit and its neighbouring pixels is
+    calculated.}
+  \label{fig:digitisation}
+\end{figure}
+
+
+%% --------------------------------------------- %%
+%% --------------------------------------------- %%
+\section{TCAD simulations}
+\label{sec:TCAD}
+Technology Computer-Aided Design (TCAD) as a powerful simulation tool
+is used to optimise and develop semiconductor processing technologies
+as well as the device operation~\cite{synopsysTCAD}. TCAD uses the
+finite element method to numerically solve the solutions to the
+physical partial differential equations in semiconductor, such as the
+continuity and diffusion equations. This allows for the modeling of
+the structural properties and the electrical behaviour of
+semiconductor devices.
+
+For this study Synopsys TCAD version I-2013.12 is used for several
+purposes. First to understand the movement of charge carriers in
+silicon and the coupling to the readout in as described in
+\cref{sec:RamoTheorem}. Also it is used to simulate active-edge
+devices and understand the measurements later in
+\cref{ch:ActiveEdgeSensors}.
 %% --------------------------------------------- %%
 
 %% --------------------------------------------- %%
@@ -284,12 +371,13 @@ opened and all the hits are integrated during an exposure time. When
 the shutter is closed, there is a dead-time where no data is acquired
 and all the hits are read out from the readout chips and recorded on
 tape in a raw data file. Whereas in the data-driven mode, the data are
-acquired as soon as a pixel is hit (there is no shutter and no
-dead-time). The hits are written in the raw file with their time-stamps
-coming from a combination of the TOA and the FPGA timing. They are not
-ordered in time in the raw file since the readout chip does not send
-them in the order they are produced. Some pre-processing is needed to
-order the hits by their time of arrival (TOA) and create events.
+acquired as soon as a pixel is hit (there is no shutter and almost no
+dead-time). The hits are written in the raw file with their
+time-stamps coming from a combination of the TOA and the FPGA timing
+from the SPIDR readout. They are not ordered in time in the raw file
+since the readout chip does not send them in the order they are
+produced. Some pre-processing is needed to order the hits by their TOA
+and create events.
 
 The reconstruction chain for the Timepix3 telescope is described in
 the following steps:
