[Telescope] biased residuals updated

--- a/include/Software.tex
+++ b/include/Software.tex
@@ -200,6 +200,7 @@ the simulation scenario and also the particle tracks in the detectors.
 
 %% --------------------------------------------- %%
 \subsection{Digitisation}
+\label{sec:allpix_digitisation}
 
 \textsc{Geant4}, for each simulation step (\texttt{G4Step}) through
 the matter, provides the energy deposited in the sensitive
