--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -25,18 +25,18 @@
 %	AUTHOR SECTION
 %----------------------------------------------------------------------------------------
 
-{\Large A thesis submitted to attain the degree of} \\ \vspace{0.5cm}
+{\large A thesis submitted to attain the degree of} \\ \vspace{0.5cm}
 {\Large DOCTOR OF SCIENCES of ETH ZURICH}\\ \vspace{0.3cm}
-{\Large (Dr. sc. ETH Zurich)} \vspace{2cm}
+{\Large (Dr. sc. ETH Zurich)} \vspace{1.5cm}
 
 
-{\Large presented by} \\ \vspace{0.3cm}
+{\large presented by} \\ \vspace{0.3cm}
 {\Large \thesisauthor}\\ \vspace{1cm}
 {\Large \textit{ing. \'{e}l. dipl. EPF, EPF Lausanne}}\\ \vspace{1cm}
 {\Large born on 11.08.1989} \\
-{\Large \thesistown}\\
-{\Large accepted on the recommendation of} \\
-{\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\
+{\Large \thesistown}\\ \vspace{2cm}
+{\large accepted on the recommendation of} \\ \vspace{0.5cm}
+{\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\ \vspace{2cm}
 
 %% \begin{minipage}{0.4\textwidth}
 %% \begin{flushleft} \large
