--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -109,7 +109,7 @@ sloped region and a plateau region. The intersection of these two
 regions gives the depletion voltage of the assembly. This is obtained
 by calculating the intersection of a linear fit performed on the both
 regions. The calculated depletion voltages for all the assemblies is
-summarised in \cref{fig:depletionVoltage}.
+summarised in \cref{tab:depletionVoltage,fig:depletionVoltage}.
 
 \begin{figure}[htbp]\centering
   \begin{subfigure}[b]{0.45\textwidth}
@@ -158,16 +158,17 @@ summarised in \cref{fig:depletionVoltage}.
 \subsection{Charge sharing as a function of the track position}
 
 The charge sharing is studied by extrapolating the track position
-obtained from the telescope to the DUT. The size of the clusters
-depends on the track position within the pixel. For the perpendicular
-tracks to the DUT, multi-pixel clusters are created when the track
-hits the edges or the corners of a pixel, leading to the charge
-sharing between the pixel and its neighbouring pixels. The charge
-sharing is also affected by the operating threshold of the readout
-ASIC in addition to the track position. \cref{fig:chargeSharingTrack}
-illustrates the track position within the pixel for 1 to 4-pixel cluster
-sizes for a $50\,\micron$ sensor. For other thicknesses, the track
-position within the pixel is shown in
+obtained from the Timepix3 telescope to the DUT. The size of the
+clusters depends on the track position within the pixel. For the
+perpendicular tracks to the DUT, multi-pixel clusters are created when
+the track hits the edges or the corners of a pixel, leading to the
+charge sharing between the pixel and its neighbouring pixels. The
+charge sharing is also affected by the operating threshold of the
+readout ASIC in addition to the track
+position. \cref{fig:chargeSharingTrack} illustrates the track position
+within the pixel for 1 to 4-pixel cluster sizes for a $50\,\micron$
+sensor. For other thicknesses, the track position within the pixel is
+shown in
 \cref{fig:chargeSharingTrack_W19_G7,fig:chargeSharingTrack_W5_E2,fig:chargeSharingTrack_W5_F1}.
 
 \begin{figure}[htbp] \centering
